--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
                 <!-- Input compuesto para busqueda -->
                 <div class="navbar_input_search">
                     <span>
-                        <img class="searchicon" src="/imagenes/icons-search.png" alt="" />
+                        <img class="searchicon" src="./imagenes/icons-search.png" alt="" />
                     </span>
                     <input class="input" type="text" placeholder="Search">
                 </div>
             </div>
             <div class="navbar-perfil">
-                <img class="iconbell" src="/imagenes/saveboton.jpg" alt="" />
-                <img class="iconmsg" src="/imagenes/msgicon.jpg" alt="" />
-                <img class="iconperfil" src="/imagenes/perfilicon.png" alt=""/>
+                <img class="iconbell" src="./imagenes/saveboton.jpg" alt="" />
+                <img class="iconmsg" src="./imagenes/msgicon.jpg" alt="" />
+                <img class="iconperfil" src="./imagenes/perfilicon.png" alt=""/>
                 <img class="iconarrow" src="./imagenes/arrowicon.jpg" alt="" />
             </div>
         </nav>
@@ -41,89 +41,89 @@
         <section class="pin_contenedor">
             <article class="pin pin_pequenio">
                 <!-- imagen -->
-                <img class="pin_contenido" src="imagenes/1.jpg" alt="Descripción de la imagen 1">
+                <img class="pin_contenido" src="./imagenes/1.jpg" alt="Descripción de la imagen 1">
                 <!-- botones -->
                 <div class="pin_botones">
-                    <img class="boton1" src="/imagenes/saveboton.jpg">
+                    <img class="boton1" src="./imagenes/saveboton.jpg">
                     <ul class="botones2">
-                        <li><img class="boton2" src="/imagenes/shareboton.jpg" alt=""></li>
-                        <li><img class="boton3" src="/imagenes/optionboton.jpg" alt=""></li>
+                        <li><img class="boton2" src="./imagenes/shareboton.jpg" alt=""></li>
+                        <li><img class="boton3" src="./imagenes/optionboton.jpg" alt=""></li>
                     </ul>
                 </div>
             </article>
             <article class="pin pin_mediano">
-                <img class="pin_contenido" src="imagenes/cassette.jpg" alt="Descripción de la imagen 1">
+                <img class="pin_contenido" src="./imagenes/cassette.jpg" alt="Descripción de la imagen 1">
                 <div class="pin_botones">
-                    <img class="boton1" src="/imagenes/saveboton.jpg">
+                    <img class="boton1" src="./imagenes/saveboton.jpg">
                     <ul class="botones2">
-                        <li><img class="boton2" src="/imagenes/shareboton.jpg" alt=""></li>
-                        <li><img class="boton3" src="/imagenes/optionboton.jpg" alt=""></li>
+                        <li><img class="boton2" src="./imagenes/shareboton.jpg" alt=""></li>
+                        <li><img class="boton3" src="./imagenes/optionboton.jpg" alt=""></li>
                     </ul>
                 </div>
             </article>
             <article class="pin pin_grande">
-                <img class="pin_contenido" src="imagenes/DjFunny.jpg" alt="Descripción de la imagen 1">
+                <img class="pin_contenido" src="./imagenes/nomusic.jpg" alt="Descripción de la imagen 1">
                 <!-- botones -->
                 <div class="pin_botones">
-                    <img class="boton1" src="/imagenes/saveboton.jpg">
+                    <img class="boton1" src="./imagenes/saveboton.jpg">
                     <ul class="botones2">
-                        <li><img class="boton2" src="/imagenes/shareboton.jpg" alt=""></li>
-                        <li><img class="boton3" src="/imagenes/optionboton.jpg" alt=""></li>
+                        <li><img class="boton2" src="./imagenes/shareboton.jpg" alt=""></li>
+                        <li><img class="boton3" src="./imagenes/optionboton.jpg" alt=""></li>
                     </ul>
                 </div>
             </article>
             <article class="pin pin_pequenio">
-                <img class="pin_contenido" src="imagenes/guitar.jpg" alt="Descripción de la imagen 1">
+                <img class="pin_contenido" src="./imagenes/guitar.jpg" alt="Descripción de la imagen 1">
                 <!-- botones -->
                 <div class="pin_botones">
-                    <img class="boton1" src="/imagenes/saveboton.jpg">
+                    <img class="boton1" src="./imagenes/saveboton.jpg">
                     <ul class="botones2">
-                        <li><img class="boton2" src="/imagenes/shareboton.jpg" alt=""></li>
-                        <li><img class="boton3" src="/imagenes/optionboton.jpg" alt=""></li>
+                        <li><img class="boton2" src="./imagenes/shareboton.jpg" alt=""></li>
+                        <li><img class="boton3" src="./imagenes/optionboton.jpg" alt=""></li>
                     </ul>
                 </div>
             </article>
             <article class="pin pin_mediano">
-                <img class="pin_contenido" src="imagenes/headphonesheart.jpg" alt="Descripción de la imagen 1">
+                <img class="pin_contenido" src="./imagenes/headphonesheart.jpg" alt="Descripción de la imagen 1">
                 <!-- botones -->
                 <div class="pin_botones">
-                    <img class="boton1" src="/imagenes/saveboton.jpg">
+                    <img class="boton1" src="./imagenes/saveboton.jpg">
                     <ul class="botones2">
-                        <li><img class="boton2" src="/imagenes/shareboton.jpg" alt=""></li>
-                        <li><img class="boton3" src="/imagenes/optionboton.jpg" alt=""></li>
+                        <li><img class="boton2" src="./imagenes/shareboton.jpg" alt=""></li>
+                        <li><img class="boton3" src="./imagenes/optionboton.jpg" alt=""></li>
                     </ul>
                 </div>
             </article>
             <article class="pin pin_grande">
-                <img class="pin_contenido" src="imagenes/maneater.jpg" alt="Descripción de la imagen 1">
+                <img class="pin_contenido" src="./imagenes/maneater.jpg" alt="Descripción de la imagen 1">
                 <!-- botones -->
                 <div class="pin_botones">
-                    <img class="boton1" src="/imagenes/saveboton.jpg">
+                    <img class="boton1" src="./imagenes/saveboton.jpg">
                     <ul class="botones2">
-                        <li><img class="boton2" src="/imagenes/shareboton.jpg" alt=""></li>
-                        <li><img class="boton3" src="/imagenes/optionboton.jpg" alt=""></li>
+                        <li><img class="boton2" src="./imagenes/shareboton.jpg" alt=""></li>
+                        <li><img class="boton3" src="./imagenes/optionboton.jpg" alt=""></li>
                     </ul>
                 </div>
             </article>
             <article class="pin pin_pequenio">
-                <img class="pin_contenido" src="imagenes/music.jpg" alt="Descripción de la imagen 1">
+                <img class="pin_contenido" src="./imagenes/music.jpg" alt="Descripción de la imagen 1">
                 <!-- botones -->
                 <div class="pin_botones">
-                    <img class="boton1" src="/imagenes/saveboton.jpg">
+                    <img class="boton1" src="./imagenes/saveboton.jpg">
                     <ul class="botones2">
-                        <li><img class="boton2" src="/imagenes/shareboton.jpg" alt=""></li>
-                        <li><img class="boton3" src="/imagenes/optionboton.jpg" alt=""></li>
+                        <li><img class="boton2" src="./imagenes/shareboton.jpg" alt=""></li>
+                        <li><img class="boton3" src="./imagenes/optionboton.jpg" alt=""></li>
                     </ul>
                 </div>
             </article>
             <article class="pin pin_mediano">
-                <img class="pin_contenido" src="imagenes/nomusic.jpg" alt="Descripción de la imagen 1">
+                <img class="pin_contenido" src="./imagenes/nomusic.jpg" alt="Descripción de la imagen 1">
                 <!-- botones -->
                 <div class="pin_botones">
-                    <img class="boton1" src="/imagenes/saveboton.jpg">
+                    <img class="boton1" src="./imagenes/saveboton.jpg">
                     <ul class="botones2">
-                        <li><img class="boton2" src="/imagenes/shareboton.jpg" alt=""></li>
-                        <li><img class="boton3" src="/imagenes/optionboton.jpg" alt=""></li>
+                        <li><img class="boton2" src="./imagenes/shareboton.jpg" alt=""></li>
+                        <li><img class="boton3" src="./imagenes/optionboton.jpg" alt=""></li>
                     </ul>
                 </div>
             </article>
@@ -131,32 +131,32 @@
                 <img class="pin_contenido" src="./imagenes/vinylstore.jpg" alt="Descripción de la imagen 1">
                 <!-- botones -->
                 <div class="pin_botones">
-                    <img class="boton1" src="/imagenes/saveboton.jpg">
+                    <img class="boton1" src="./imagenes/saveboton.jpg">
                     <ul class="botones2">
-                        <li><img class="boton2" src="/imagenes/shareboton.jpg" alt=""></li>
-                        <li><img class="boton3" src="/imagenes/optionboton.jpg" alt=""></li>
+                        <li><img class="boton2" src="./imagenes/shareboton.jpg" alt=""></li>
+                        <li><img class="boton3" src="./imagenes/optionboton.jpg" alt=""></li>
                     </ul>
                 </div>
             </article>
             <article class="pin pin_pequenio">
-                <img class="pin_contenido" src="imagenes/tattoo.jpg" alt="Descripción de la imagen 1">
+                <img class="pin_contenido" src="./imagenes/tattoo.jpg" alt="Descripción de la imagen 1">
                 <!-- botones -->
                 <div class="pin_botones">
-                    <img class="boton1" src="/imagenes/saveboton.jpg">
+                    <img class="boton1" src="./imagenes/saveboton.jpg">
                     <ul class="botones2">
-                        <li><img class="boton2" src="/imagenes/shareboton.jpg" alt=""></li>
-                        <li><img class="boton3" src="/imagenes/optionboton.jpg" alt=""></li>
+                        <li><img class="boton2" src="./imagenes/shareboton.jpg" alt=""></li>
+                        <li><img class="boton3" src="./imagenes/optionboton.jpg" alt=""></li>
                     </ul>
                 </div>
             </article>
             <article class="pin pin_mediano">
-                <img class="pin_contenido" src="/imagenes/vinyl.jpg" alt="Descripcion de la imagen 1">
+                <img class="pin_contenido" src="./imagenes/vinyl.jpg" alt="Descripcion de la imagen 1">
                 <!-- botones -->
                 <div class="pin_botones">
-                    <img class="boton1" src="/imagenes/saveboton.jpg">
+                    <img class="boton1" src="./imagenes/saveboton.jpg">
                     <ul class="botones2">
-                    <li><img class="boton2" src="/imagenes/shareboton.jpg" alt=""></li>
-                    <li><img class="boton3" src="/imagenes/optionboton.jpg" alt=""></li>
+                    <li><img class="boton2" src="./imagenes/shareboton.jpg" alt=""></li>
+                    <li><img class="boton3" src="./imagenes/optionboton.jpg" alt=""></li>
                     </ul>
                 </div>
             </article>
@@ -164,76 +164,76 @@
                 <img class="pin_contenido" src="./imagenes/vinylstore.jpg" alt="Descripción de la imagen 1">
                 <!-- botones -->
                 <div class="pin_botones">
-                    <img class="boton1" src="/imagenes/saveboton.jpg">
+                    <img class="boton1" src="./imagenes/saveboton.jpg">
                     <ul class="botones2">
-                        <li><img class="boton2" src="/imagenes/shareboton.jpg" alt=""></li>
-                        <li><img class="boton3" src="/imagenes/optionboton.jpg" alt=""></li>
+                        <li><img class="boton2" src="./imagenes/shareboton.jpg" alt=""></li>
+                        <li><img class="boton3" src="./imagenes/optionboton.jpg" alt=""></li>
                     </ul>
                 </div>
             </article>
             <article class="pin pin_pequenio">
-                <img class="pin_contenido" src="/imagenes/text3.jpg" alt="Descripción de la imagen 1">
+                <img class="pin_contenido" src="./imagenes/text3.jpg" alt="Descripción de la imagen 1">
                 <!-- botones -->
                 <div class="pin_botones">
-                    <img class="boton1" src="/imagenes/saveboton.jpg">
+                    <img class="boton1" src="./imagenes/saveboton.jpg">
                     <ul class="botones2">
-                        <li><img class="boton2" src="/imagenes/shareboton.jpg" alt=""></li>
-                        <li><img class="boton3" src="/imagenes/optionboton.jpg" alt=""></li>
+                        <li><img class="boton2" src="./imagenes/shareboton.jpg" alt=""></li>
+                        <li><img class="boton3" src="./imagenes/optionboton.jpg" alt=""></li>
                     </ul>
                 </div>
             </article>
             <article class="pin pin_mediano">
-                <img class="pin_contenido" src="/imagenes/text2.jpg" alt="Descripcion de la imagen 1">
+                <img class="pin_contenido" src="./imagenes/text2.jpg" alt="Descripcion de la imagen 1">
                 <!-- botones -->
                 <div class="pin_botones">
-                    <img class="boton1" src="/imagenes/saveboton.jpg">
+                    <img class="boton1" src="./imagenes/saveboton.jpg">
                     <ul class="botones2">
-                    <li><img class="boton2" src="/imagenes/shareboton.jpg" alt=""></li>
-                    <li><img class="boton3" src="/imagenes/optionboton.jpg" alt=""></li>
+                    <li><img class="boton2" src="./imagenes/shareboton.jpg" alt=""></li>
+                    <li><img class="boton3" src="./imagenes/optionboton.jpg" alt=""></li>
                     </ul>
                 </div>
             </article>
             <article class="pin pin_grande">
-                <img class="pin_contenido" src="/imagenes/music.jpg" alt="Descripción de la imagen 1">
+                <img class="pin_contenido" src="./imagenes/music.jpg" alt="Descripción de la imagen 1">
                 <!-- botones -->
                 <div class="pin_botones">
-                    <img class="boton1" src="/imagenes/saveboton.jpg">
+                    <img class="boton1" src="./imagenes/saveboton.jpg">
                     <ul class="botones2">
-                        <li><img class="boton2" src="/imagenes/shareboton.jpg" alt=""></li>
-                        <li><img class="boton3" src="/imagenes/optionboton.jpg" alt=""></li>
+                        <li><img class="boton2" src="./imagenes/shareboton.jpg" alt=""></li>
+                        <li><img class="boton3" src="./imagenes/optionboton.jpg" alt=""></li>
                     </ul>
                 </div>
             </article>
             <article class="pin pin_pequenio">
-                <img class="pin_contenido" src="/imagenes/cassette.jpg" alt="Descripción de la imagen 1">
+                <img class="pin_contenido" src="./imagenes/cassette.jpg" alt="Descripción de la imagen 1">
                 <!-- botones -->
                 <div class="pin_botones">
-                    <img class="boton1" src="/imagenes/saveboton.jpg">
+                    <img class="boton1" src="./imagenes/saveboton.jpg">
                     <ul class="botones2">
-                        <li><img class="boton2" src="/imagenes/shareboton.jpg" alt=""></li>
-                        <li><img class="boton3" src="/imagenes/optionboton.jpg" alt=""></li>
+                        <li><img class="boton2" src="./imagenes/shareboton.jpg" alt=""></li>
+                        <li><img class="boton3" src="./imagenes/optionboton.jpg" alt=""></li>
                     </ul>
                 </div>
             </article>
             <article class="pin pin_mediano">
-                <img class="pin_contenido" src="/imagenes/headphonesheart.jpg" alt="Descripcion de la imagen 1">
+                <img class="pin_contenido" src="./imagenes/headphonesheart.jpg" alt="Descripcion de la imagen 1">
                 <!-- botones -->
                 <div class="pin_botones">
-                    <img class="boton1" src="/imagenes/saveboton.jpg">
+                    <img class="boton1" src="./imagenes/saveboton.jpg">
                     <ul class="botones2">
-                    <li><img class="boton2" src="/imagenes/shareboton.jpg" alt=""></li>
-                    <li><img class="boton3" src="/imagenes/optionboton.jpg" alt=""></li>
+                    <li><img class="boton2" src="./imagenes/shareboton.jpg" alt=""></li>
+                    <li><img class="boton3" src="./imagenes/optionboton.jpg" alt=""></li>
                     </ul>
                 </div>
             </article>
             <article class="pin pin_grande">
-                <img class="pin_contenido" src="/imagenes/guitar.jpg" alt="Descripción de la imagen 1">
+                <img class="pin_contenido" src="./imagenes/guitar.jpg" alt="Descripción de la imagen 1">
                 <!-- botones -->
                 <div class="pin_botones">
-                    <img class="boton1" src="/imagenes/saveboton.jpg">
+                    <img class="boton1" src="./imagenes/saveboton.jpg">
                     <ul class="botones2">
-                        <li><img class="boton2" src="/imagenes/shareboton.jpg" alt=""></li>
-                        <li><img class="boton3" src="/imagenes/optionboton.jpg" alt=""></li>
+                        <li><img class="boton2" src="./imagenes/shareboton.jpg" alt=""></li>
+                        <li><img class="boton3" src="./imagenes/optionboton.jpg" alt=""></li>
                     </ul>
                 </div>
             </article>
