--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </div>
             </div>
             <div class="navbar-perfil">
-                <img class="iconbell" src="./imagenes/saveboton.jpg" alt="" />
+                <img class="iconbell" src="./imagenes/bellicon.png" alt="" />
                 <img class="iconmsg" src="./imagenes/msgicon.jpg" alt="" />
                 <img class="iconperfil" src="./imagenes/perfilicon.png" alt=""/>
                 <img class="iconarrow" src="./imagenes/arrowicon.jpg" alt="" />
