--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 </div>
             </article>
             <article class="pin pin_mediano">
-                <img class="pin_contenido" src="./imagenes/nomusic.jpg" alt="Descripción de la imagen 1">
+                <img class="pin_contenido" src="./imagenes/DjFunny.jpg" alt="Descripción de la imagen 1">
                 <!-- botones -->
                 <div class="pin_botones">
                     <img class="boton1" src="./imagenes/saveboton.jpg">
